deploy/kubernetes/llmd-base/llmd+public-llm/svc-openai.yaml
apiVersion: v1
kind: Service
metadata:
  name: openai-external
  namespace: default
spec:
  type: ExternalName
  externalName: api.openai.com
  ports:
    - port: 443
      targetPort: 443
