deploy/kubernetes/llmd-base/llmd+public-llm/dest-rule-openai.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: openai-tls
  namespace: default
spec:
  host: api.openai.com
  trafficPolicy:
    tls:
      mode: SIMPLE
