deploy/kubernetes/llmd-base/llmd+public-llm/httproute-openai.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vsr-openai-g4
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: inference-gateway
  rules:
  - backendRefs:
    - name: openai-external
      namespace: default
      port: 443
    matches:
    - path:
        type: PathPrefix
        value: /
      headers:
      - type: Exact
        name: x-selected-model
        value: gpt-4o-mini
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: Host
          value: "api.openai.com"
        - name: Authorization
          value: "Bearer %(OPENAI_API_KEY)s"
    timeouts:
      request: 300s
